# deletebot

./: .gitignore  pyproject.toml
deletebot/: config.py  main.py  states.py  utils.py
deletebot/db/: adjusters.py  fetchers.py  services.py
deletebot/handlers/: __init__.py  send_message.py  start.py  update.py
deletebot/middlewares/: scheduler.py
